@@ -12,11 +12,12 @@ schema_DATA = $(schema_in_files:.schemas.in=.schemas)
 @INTLTOOL_SCHEMAS_RULE@
 
 install-icons:
+# This sucks
 	for size in 16x16 22x22 24x24 scalable; do mkdir --parents $(DESTDIR)/$(datadir)/icons/hicolor/$$size/apps; done
-	install sound-juicer-16.png $(DESTDIR)/$(datadir)/icons/hicolor/16x16/apps/sound-juicer.png
-	install sound-juicer-22.png $(DESTDIR)/$(datadir)/icons/hicolor/22x22/apps/sound-juicer.png
-	install sound-juicer-24.png $(DESTDIR)/$(datadir)/icons/hicolor/24x24/apps/sound-juicer.png
-	install sound-juicer.svg $(DESTDIR)/$(datadir)/icons/hicolor/scalable/apps/sound-juicer.svg
+	install $(srcdir)/sound-juicer-16.png $(DESTDIR)/$(datadir)/icons/hicolor/16x16/apps/sound-juicer.png
+	install $(srcdir)/sound-juicer-22.png $(DESTDIR)/$(datadir)/icons/hicolor/22x22/apps/sound-juicer.png
+	install $(srcdir)/sound-juicer-24.png $(DESTDIR)/$(datadir)/icons/hicolor/24x24/apps/sound-juicer.png
+	install $(srcdir)/sound-juicer.svg $(DESTDIR)/$(datadir)/icons/hicolor/scalable/apps/sound-juicer.svg
 
 install-data-local: install-icons
 	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) \
@@ -35,4 +36,5 @@ CLEANFILES = \
 EXTRA_DIST = \
 	$(privatedata_DATA) \
 	$(desktop_in_files) \
-	$(schema_in_files)
+	$(schema_in_files) \
+	sound-juicer-16.png sound-juicer-22.png sound-juicer-24.png sound-juicer.svg
