@@ -6,6 +6,11 @@
 
 2006-02-28  Ross Burton  <ross@burtonini.com>
 
+	* data/Makefile.am:
+	Fix dist.
+
+2006-02-28  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-prefs.c:
 	Change sample data, show extension in sample label, and update it
 	more often.
